--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,19 @@
     z-index: 99;
 }
 
+.floating-whatsapp {
+    position: fixed;
+    bottom: 20px; /* Cambia esto según donde quieras posicionar el botón verticalmente */
+    right: 20px; /* Cambia esto según donde quieras posicionar el botón horizontalmente */
+    z-index: 1000;
+  }
+  
+  /* Estilo para el icono de WhatsApp */
+  .floating-whatsapp i {
+    width: 50px; /* Tamaño del icono */
+    border-radius: 50%; /* Para que sea un círculo */
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); /* Sombra suave */
+  }
 
 /*** Heading ***/
 h1,
