--- a/css/style.css
+++ b/css/style.css
@@ -727,4 +727,17 @@ h6,
     height: 80px;
     font-size: 40px;
 }
-
+/* CSS */
+@keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .rotating-image {
+    animation: rotate 5s ;
+  }
+  
