--- a/css/style.css
+++ b/css/style.css
@@ -740,4 +740,7 @@ h6,
   .rotating-image {
     animation: rotate 5s ;
   }
-  
+  .subrayado {
+    text-decoration: underline; 
+    color: blue !important;
+  }
